overflow fixed

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,3 +1,7 @@
+body {
+  overflow-x: hidden;
+}
+
 .ecopledge-explanation {
   background: #4886c1;
   text-align: center;
